ansible/roles/ingress-resources/files/elk-externalName.yaml
## PORT => 3000

apiVersion: v1
kind: Service
metadata:
  name: kibana-kibana
spec:
  externalName: kibana-kibana.elk.svc.cluster.local
  type: ExternalName
