ansible/roles/ingress-resources/files/sonarqube-ExternalName.yaml
## PORT => 5000

apiVersion: v1
kind: Service
metadata:
  name: sonarqube-sonarqube
spec:
  externalName: sonarqube-sonarqube.sonarqube.svc.cluster.local
  type: ExternalName
